# classapp

./: .dockerignore  .env  .env.example  .env.prod  .gitignore  DEPLOY.md  Dockerfile  Makefile  PLAN.md  README.md  SPEC.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: deploy.yml  test.yml
app/: config.py  dependencies.py  main.py
app/db/: sqlite.py
app/models/: book_reading.py  quiz.py  roster.py  schedule.py  student.py
app/routers/: admin.py  auth.py  book_reading.py  claim.py  onboarding.py  pages.py  quizzes.py  tools.py
app/services/: analytics.py  cache.py  email.py  grading.py  quiz_parser.py  sessions.py  sheets.py  tokens.py  tool_parser.py
app/templates/: admin_analytics.html  admin_book_reading.html  admin_grading.html  admin_presentations.html  admin_quiz_analytics.html  base.html  book_reading.html  claim.html  class.html  error.html  final_projects.html  home.html  me.html  onboarding.html  quiz.html  quiz_result.html  quizzes.html  schedule.html  signin.html  tool.html  tools.html
content/notes/: 001-intro.md  006-careers.md  007-bugbounty.md
content/tools/: censys.md  (+7 more)
nginx/: classapp.conf
scripts/: provision.sh  seed_sheets.py  update_schedule_links.py
tests/: conftest.py  test_admin.py  test_analytics.py  test_auth.py  test_cache.py  test_claim.py  test_grading.py  test_health.py  test_models.py  test_onboarding.py  test_quiz_parser.py  test_root.py  test_sheets.py  test_sqlite.py  test_tokens.py  test_tool_parser.py  test_tools.py
(+42 files in other folders)
